# city

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  run.bat  run.sh
docs/: architecture.md  content-authoring.md  game-design.md  networking.md  progress.md
src/: main.cpp
src/client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
src/client/input/: input_manager.cpp  input_manager.hpp
src/client/net/: client_connection.cpp  client_connection.hpp  content_downloader.cpp  content_downloader.hpp
src/client/prediction/: input_buffer.cpp  input_buffer.hpp  interpolation.cpp  interpolation.hpp  prediction.cpp  prediction.hpp
src/client/render/: renderer.cpp  renderer.hpp  sprite_batch.cpp  sprite_batch.hpp  tile_renderer.cpp  tile_renderer.hpp
src/client/render/vulkan/: vk_context.cpp  vk_context.hpp
src/client/ui/: chat_window.cpp  chat_window.hpp
src/core/: CMakeLists.txt
src/core/content/: content_loader.cpp  content_loader.hpp  content_manifest.cpp  content_manifest.hpp
src/core/ecs/: component.hpp  entity.hpp  system.hpp  world.cpp  world.hpp
src/core/game/components/: player.hpp  transform.hpp
src/core/game/systems/: movement.cpp  movement.hpp
src/core/grid/: chunk.cpp  chunk.hpp  tile.hpp  tilemap.cpp  tilemap.hpp
src/core/net/: message.cpp  message.hpp  protocol.hpp  serialization.cpp  serialization.hpp
src/core/util/: types.cpp  types.hpp
src/server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
src/server/net/: client_session.cpp  client_session.hpp  content_server.cpp  content_server.hpp  server_connection.cpp  server_connection.hpp
src/server/profiling/: profiler.cpp  profiler.hpp  profiler_window.cpp  profiler_window.hpp
src/server/simulation/: game_state.cpp  game_state.hpp  round_manager.cpp  round_manager.hpp
src/server/systems/: entity_sync.cpp  entity_sync.hpp  input_processor.cpp  input_processor.hpp
tests/: CMakeLists.txt  test_example.cpp
tests/core/: test_ecs.cpp  test_grid.cpp  test_serialization.cpp
